--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "4.0.0-beta.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -48,6 +49,7 @@
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -57,6 +59,7 @@
     "prettier": "^1.10.2",
     "prettier-eslint": "^8.7.3",
     "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
