--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-beta.3",
+    "lodash": "^4.17.4",
+    "spotify-web-api-js": "^0.23.0",
     "vue": "^2.5.2",
+    "vue-awesome": "^2.3.4",
     "vue-class-component": "^6.1.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
