--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "spotify-user-data",
+  "name": "Recommendify",
   "version": "1.0.0",
   "description": "Tool to let Spotify users explore their preferences",
   "author": "Felix Queiruga Balado <felix.queiruga@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev":
+      "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
@@ -83,9 +84,5 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
 }
